Fixed alignment of "New Search" button

--- a/app/assets/stylesheets/customOverrides/subheader_users.scss
+++ b/app/assets/stylesheets/customOverrides/subheader_users.scss
@@ -5,7 +5,7 @@ DEFAULT MOBILE STYLING
 .user-subheader {
   margin-left: 15px;
   margin-right: 15px;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
   display: flex;
   border-bottom: .5px solid $light_grey;
   padding-bottom: 6px;
